--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
 		<div class="container-fluid secondary-nav">
 			<div class="container">
 				<ul>
-					<li><a class="active" href="#">About Us</a></li>
+					<li><a class="active" href="#about">About Us</a></li>
 					<li><a href="#management">Our Management</a></li>
 					<li><a href="#staff">Staff</a></li>
 					<li><a href="#advisory">Advisory Panel</a></li>
@@ -55,10 +55,10 @@
 		</div>
 		
 		<!-- About Vivriti -->
-		<div class="container-fluid about">
+		<div class="container-fluid about" id="about">
 			<div class="container">
 				<h1 class="text-center">Vivriti Education System</h1>
-				<div class="col-md-offset-4">
+				<div class="">
 					<img src="images/222.jpg" class="img-responsive" alt="">
 				</div>
 				<p class="text-justify">VIVRITI Edu is founded by enthusiastic professionals from diverse backgrounds in a collaborative journey into the future of education. Our sole intention is to restructure learning philosophy in order to align with the needs of rapidly changing global world.<br/>Vivriti provides preschools, child-care services, after-school enrichment programs, summer programs and tuitions & project assistance. Our teaching team is very passionate about their field of work and spent hours researching, brainstorming, discussing and debating to develop appropriate curriculum to meet the global standards. Team vivriti is fully equipped to support our students by creating exciting and rewarding learning environment.<br/>Vivriti will endeavour to show your children a path that will take him through the best possible learning process eventually culminating in a holistic development of his personality. OUR MOTTO is to educate our young children to be thoughtful, ethical, and confident global citizens. We define a powerful vision for 21st century education to ensure every child's success as a leader, citizen and workers in this new world. We invite you to join hands with us and give us an opportunity to secure the future of your child</p>
@@ -71,7 +71,7 @@
 			<div class="container">
 				<h1 class="text-center">Meet Our Management</h1>
 				<div class="row">
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/mt1.jpg" class="img-responsive"/>
 						<h4>Dr. Rajeena Shahin</h4>
 						<h5>MBBS, PGDBM.<br/>Managing</h5>
@@ -79,7 +79,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/mt2.jpg" class="img-responsive"/>
 						<h4>Jyotsna Arun</h4>
 						<h5>MA, BSc Ed.<br>Director & Principal</h5>
@@ -87,7 +87,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/mt3.jpg" class="img-responsive"/>
 						<h4>Mini Nair</h4>
 						<h5>MSc Microbiology<br>Director & Academic Head</h5>
@@ -95,7 +95,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/mt4.png" class="img-responsive"/>
 						<h4>Navita Bhat</h4>
 						<h5>Diploma in Mech.Engg<br>Director & Associate Principal</h5>
@@ -112,7 +112,7 @@
 			<div class="container">
 				<h1 class="text-center">Staff</h1>
 				<div class="row">
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/staff1.jpg" class="img-responsive"/>
 						<h4>Abhinandana Naveen</h4>
 						<h5>Kindergarden Core Teacher</h5>
@@ -120,7 +120,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/staff2.jpg" class="img-responsive"/>
 						<h4>Anila Shelly</h4>
 						<h5>Pre-Nursery Teacher</h5>
@@ -128,7 +128,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/staff3.jpg" class="img-responsive"/>
 						<h4>Kavita Krishnakumar</h4>
 						<h5>VASEP Teacher</h5>
@@ -136,7 +136,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/staff4.jpg" class="img-responsive"/>
 						<h4>Swathi. C. Sangollit</h4>
 						<h5>MMT Teacher</h5>
@@ -146,7 +146,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3 text-center">
+					<div class="col-sm-3 mt col-md-3 col-sm-offset-3 col-md-offset-3 text-center">
 						<img src="images/staff5.jpg" class="img-responsive"/>
 						<h4>Pradnya</h4>
 						<h5>Music Teacher</h5>
@@ -154,7 +154,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/staff6.jpeg" class="img-responsive"/>
 						<h4>Navita Bhat</h4>
 						<h5>Nursery Teacher</h5>
@@ -171,7 +171,7 @@
 			<div class="container">
 				<h1 class="text-center">Our Advisory Panel</h1>
 				<div class="row">
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap1.jpg" class="img-responsive"/>
 						<h4>Jayakumar Thekkath</h4>
 						<h5>BSc Egg. Electrical</h5>
@@ -179,7 +179,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap2.jpg" class="img-responsive"/>
 						<h4>Shahin Basheer</h4>
 						<h5>B.Tech. Computer Science</h5>
@@ -187,7 +187,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap3.jpg" class="img-responsive"/>
 						<h4>Arun Kumar</h4>
 						<h5>BE, MBA</h5>
@@ -195,7 +195,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap4.jpg" class="img-responsive"/>
 						<h4>Dinker G Mattam</h4>
 						<h5>B.Tech, PGDBM</h5>
@@ -205,7 +205,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap5.png" class="img-responsive"/>
 						<h4>Dr Safiya MS</h4>
 						<h5>MBBS , DPM</h5>
@@ -213,7 +213,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap6.png" class="img-responsive"/>
 						<h4>Dr. Hema Nakula</h4>
 						<h5>Nutritionist</h5>
@@ -221,7 +221,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap7.jpg" class="img-responsive"/>
 						<h4>Aakash Nambiar</h4>
 						<h5>B.Tech, MBA</h5>
@@ -229,7 +229,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap8.jpg" class="img-responsive"/>
 						<h4>Ajay Chandra</h4>
 						<h5>MSc. Clinical Psychology</h5>
@@ -239,7 +239,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3 text-center">
+					<div class="col-sm-3 mt col-md-3 col-sm-offset-3 col-md-offset-3 text-center">
 						<img src="images/ap9.jpg" class="img-responsive"/>
 						<h4>Padmashree Bhat</h4>
 						<h5>BE, MS-Software Systems</h5>
@@ -247,7 +247,7 @@
 							<button type="button" class="btn btn-warning">Read More</button>
 						</a>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<img src="images/ap10.jpg" class="img-responsive"/>
 						<h4>Revathi Mohandas</h4>
 						<h5>MSc Psychology</h5>
@@ -264,7 +264,7 @@
 			<div class="container">
 				<h1 class="text-center">Our Collaborators</h1>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-2 text-center">
+					<div class="col-sm-3 mt col-md-3 col-sm-offset-2 col-md-offset-2 text-center">
 						<div class="card">
 							<img class="card-img-top" src="images/Motherhood.png" alt="Card image cap">
 							<div class="card-block">
@@ -276,18 +276,18 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block guru">
 								<h3 class="card-title">Guruprasad</h3>
-								<p class="card-text"><b>FieldTrip Expert</b><br/>An Engineer by profession, Guruprasad is a nature enthusiast who helps in putting...</p>
+								<p class="card-text"><b>FieldTrip Expert</b><br/>An Engineer by profession, Guruprasad is a nature enthusiast who helps...</p>
 								<a href="#guruprasad" data-toggle="modal">
 									<button type="button" class="btn btn-warning">Read More</button>
 								</a>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<img class="card-img-top" src="images/Cloudnine.png" alt="Card image cap">
 							<div class="card-block">
@@ -301,7 +301,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Bhaskar</h3>
@@ -312,7 +312,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Iqbal Bhalla</h3>
@@ -323,7 +323,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Naga and Ashwini</h3>
@@ -334,7 +334,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Mazharuddin</h3>
@@ -354,7 +354,7 @@
 			<div class="container">
 				<h1 class="text-center">Tie Up Schools</h1>
 				<div class="row">
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Trio World Academy</h3>
@@ -366,7 +366,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Vibgyor high</h3>
@@ -378,7 +378,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Vishwavidyapeeth</h3>
@@ -390,7 +390,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Vyasa International</h3>
@@ -404,7 +404,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3 text-center">
+					<div class="col-sm-3 mt col-md-3 col-sm-offset-3 col-md-offset-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Dhee Global School</h3>
@@ -416,7 +416,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-sm-3 mt col-md-3 text-center">
 						<div class="card">
 							<div class="card-block">
 								<h3 class="card-title">Capitol Public School</h3>
@@ -912,5 +912,21 @@
 		<!-- Bootstrap JavaScript -->
 		<script src="scripts/bootstrap.min.js"></script>
  		<script type="text/javascript" src="scripts/code.js"></script>
+ 		<script type="text/javascript">
+ 			$(function() {
+  			$('.secondary-nav a[href*="#"]:not([href="#"])').click(function() {
+    			if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+      		var target = $(this.hash);
+      		target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+      		if (target.length) {
+        		$('html, body').animate({
+         		 scrollTop: target.offset().top
+        		}, 1000);
+        		return false;
+      			}
+    			}
+  			});
+			});
+ 		</script>
 	</body>
 </html>
