--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
 						</li>
 						<li>
 							<a href="gallery.html" target="_self">
-								<i class="glyphicon fa fa-picture-o" aria-hidden="true"></i>
+								<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
 							</a>
 						</li>
 						<li>
